Fix alignments with images and descriptions

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ nav > button {
     gap: 20px;
 }
 
-h1 {
+h1, h2, h3, h4 {
     margin: 0;
     margin-top: 20px;
 }
@@ -43,3 +43,30 @@ h1 {
     max-width: 600px;
     margin: 10px;
 }
+
+#menu-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 350px;
+    gap: 20px;
+}
+
+#menu-item {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+#menu-header {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+#menu-image {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+}
+
